# riptext

./: .gitignore  AGENTS.md  README.md  ROADMAP.md  pyproject.toml
.github/: copilot-instructions.md
src/riptext/: app.py  cli.py  commands.py  config.py  favorites.py  history.py  macros.py  save.py  script_manager.py  selection.py  syntax.py
src/riptext/core/: __init__.py  execution.py  models.py  scripts.py  search.py
src/riptext/rips/: __init__.py
src/riptext/rips/builtins/: __init__.py  add_line_number.py  base64_decode.py  base64_encode.py  camel_case.py  count_stats.py  csv_to_json.py  detect_language.py  html_escape.py  html_unescape.py  json_minify.py  json_prettify.py  json_to_csv.py  json_to_yaml.py  jwt_decode.py  kebab_case.py  lowercase.py  markdown_table.py  md5_hash.py  regex_extract.py  regex_replace.py  remove_duplicates.py  reverse.py  reverse_lines.py  sha256_hash.py  slugify.py  snake_case.py  sort_lines.py  strip_html.py  timestamp_convert.py  title_case.py  trim.py  uppercase.py  url_decode.py  url_encode.py  uuid_generate.py  wrap_lines.py  wrap_width.py  xml_minify.py  xml_prettify.py  (+1 more)
tests/: test_builtins.py  test_config.py  test_execution.py  test_history.py  test_macros.py  test_scripts.py  test_selection.py
